--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Music Concert 2020</title>
+    <title>investors</title>
   </head>
 
 <body>
@@ -31,15 +31,15 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/concert.jpg" width="80%" height="550" class="d-block w-100" alt="...">
-      <h2 id="concert-head">CONCERT 2020</h2>
+      <img src="images/invest.jpg" width="80%" height="550" class="d-block w-100" alt="...">
+      <h2 id="invest-head">7 ways to impress your potential investors</h2>
       <p id="concert-date">15th August 2020</p>
       <div class="carousel-caption d-none d-md-block">
       	<h3>Let music flow in your heart and enrich your soul. ...</h3>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/concert1.jpg" width="80%" height="550" class="d-block w-100" alt="...">
+      <img src="images/invest1.jpg" width="80%" height="550" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
       	<h3>Arijit Singh</h3>
       </div>
@@ -62,33 +62,7 @@
 </div>
 </div>
 
-      <div class="wrap1" id="aboutDiv">
-        <h2>About Event</h2>
-        <p>
-          <br>
-          Music Concert 2020
-          <br>
-    <br>
-    A very unique concept in a tribute to Mohd Rafi Saheb on his 40th Death Anniversary where classically trained and versatile playback singers present Md Rafi’s raagas based songs in a completely different style.
-    <br>
-    <h2>Singers</h2>
-    <br>
-    <p id="Singers">
-    Arijit Singh <br> 
-    & <br> 
-    Atif Aslam
-	</p>
-	<br>
-	<p>
-    	<h2>Event Details</h2>
-    <br>
-	Venue - Veermata Jijabai Technological Institute (VJTI) Cricket Ground<br><br>	
-   	Date - 15th August 2020<br><br>
-	Time - 7 PM onwards	
-	</p>
-    <br>
-    
-    </div>
+      
 
     <div class="section" id="registerBlock">
 	<form>
